# qtav-player

./: .gitignore  CMakeLists.txt  README.md
QtAV/lib/debug/: QtAVWidgetsd1.lib  QtAVd1.lib
QtAV/lib/release/: QtAV1.lib  QtAVWidgets1.lib
debug/: .ninja_deps  .ninja_log  CMakeCache.txt  av_player.exp  av_player.ilk  av_player.lib  build.ninja  cmake_install.cmake  memory.txt
debug/av_player_autogen/: mocs_compilation.cpp
debug/av_player_autogen/UVLADIE3JM/: moc_qtav_player.cpp  moc_slider.cpp
release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
src/: av_player.cpp  av_player.h  main.cpp  player_window.cpp  player_window.h  playerwindow.h  qtav_player.cpp  qtav_player.h  slider.cpp
